--- a/FunctionDevelopment.Rmd
+++ b/FunctionDevelopment.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(echo = TRUE)
   - III.2 Code Attempts
 * IV. New Function: Get Behaviors
   - IV.1 Pseudo-Code
+* V. Isolate Focal Function
 
 # I. Packages
 
@@ -24,6 +25,15 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```
 
+## data import
+
+```{r}
+monkeyprelimdata <- read.csv("~/Desktop/monkey/monkeyprelimdata.csv")
+behaviorshortlist <-c("Move", "Vigilance", "Feed", "Rest",
+               "Affiliative", "Aggressive", "SelfGroom",
+               "Survey", "PAUSE", "Human Directed",
+               "Forage", "Sleep", "Play")
+```
 
 # II. Transition Matrix from an Individual Focal
 
@@ -53,10 +63,6 @@ matrixfunct <- function(dataframe, behaviorshortlist){
   }
 return(Matrix)
 }
-
-Matrix <- matrixfunct(focal28, behaviorshortlist)
-rowSums(Matrix)
-Matrix
 ```
 
 ** NOTE: this does not work when we have the situation where the data file has 2 of the same behavior right on top of eachother --> probably easier to fix by cleaning the dataframe than changing the function (also we never concretely established why it is like that in the data)
@@ -181,7 +187,20 @@ get_LL <- function(data, P){
   return(LogL)
 }
 ```
-- where to use data?
+
+```{r}
+## ok im gonna train it on focal 28 and then use focal 10 as the input data?
+
+P_28 <- matrixfunct(focal_28, behaviorshortlist)
+P_28
+
+focal_10 <- isolate.focal(10)
+P_10 <- matrixfunct(focal_10, behaviorshortlist)
+```
+
+- i think im missing something
+- like somewhere there is supposed to be a part where i can put some variables like forst/road or whatever and that is included in the likelihood?
+
 
 # IV. Get Behaviors
 
@@ -194,3 +213,17 @@ get_behaviors —> function(P, initial_behavior){
 	.
 	.
 	return(Behaviors)}
+	
+## V Isolate focal function
+```{r}
+## function to isolate a single focal & add a cumulative time column
+isolate.focal <- function(i){
+  onefocal.i <- subset(monkeyprelimdata, monkeyprelimdata$FocalID == i)
+  cumsum.i <- data.frame(cumsum(onefocal.i$TimeSpent))
+  onefocal.i <- cbind(onefocal.i, cumsum.i)
+  return(onefocal.i)
+}
+
+# test
+focal_28 <- isolate.focal(28)
+```
